fourth commit- added link to the reset.css file

--- a/CSS_Assessment/index.html
+++ b/CSS_Assessment/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>CSS Stylesheets With Relative Paths</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-
+  <link rel="stylesheet" href="reset.css">
+  
 <body>
   
   
