--- a/Module-1_Assessment/portfolio.html
+++ b/Module-1_Assessment/portfolio.html
@@ -48,19 +48,19 @@
         <hr class="my-4">
         <div class="img-container">
         
-        <p><img class="img-responsive" src="portfolio-abstract.jpg" alt="abstract" class="float-left" style="width:170px;height:170px;margin-right:15px; " ></p>
+        <p><img class="img-responsive" src="assets/images/portfolio-abstract.jpg" alt="abstract" class="float-left" style="width:160px;height:120px;margin-right:15px; " ></p>
         </div>
         <div class="img-container">
-          <p><img class="img-responsive" src="portfolio-cat.jpg" alt="cat_1" class="float-right" style="width:170px;height:170px;margin-right:15px; "></p>
+          <p><img class="img-responsive" src="assets/images/portfolio-cat.jpg" alt="cat_1" class="float-right" style="width:160px;height:120px;margin-right:15px; "></p>
         </div>
         <div class="img-container">
-        <p><img class="img-responsive" src="portfolio-cat-2-spotted.jpg" alt="cat_2" style="width:170px;height:170px;margin-right:15px; "></p>
+        <p><img class="img-responsive" src="assets/images/portfolio-cat-2-spotted.jpg" alt="cat_2" style="width:160px;height:120px;margin-right:15px; "></p>
       </div>  
         <div class="img-container">
-      <p><img class="img-responsive" src="portfolio-golden-gate-bridge.jpg" alt="golden_gate_bridge" style="width:170px;height:170px;margin-right:15px; "></p>
+      <p><img class="img-responsive" src="assets/images/portfolio-golden-gate-bridge.jpg" alt="golden_gate_bridge" style="width:160px;height:120px;margin-right:15px; "></p>
     </div>    
         <div class="img-container">
-    <p><img class="img-responsive" src="portfolio-trees-in-autumn.jpg" alt="autumn_trees" style="width:170px;height:170px;margin-right:15px; "></p>
+    <p><img class="img-responsive"src="assets/images/portfolio-trees-in-autumn.jpg" alt="autumn_trees" style="width:160px;height:120px;margin-right:15px; "></p>
 </div>
     </div>
     </div>
