--- a/Module-1_Assessment/index.html
+++ b/Module-1_Assessment/index.html
@@ -47,15 +47,9 @@
         <h3 style="font-size:2vw;">About Me</h3> <! –– adjust font size ––>
         <hr class="my-4">
         
-        <div class="row">
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <a href="assets/images/about_me_profile_picture.png" target="_blank">
-                <img class="img-responsive" src="assets/images/about_me_profile_picture.png" alt="profile picture" style="width:100%; ">
-                </a>
-              </div>
-            </div>
-          <p style="font-size:1vw;">Welcome to my page! My name is Norma and I'm a soon to be graduate from the Univerity of St. Thomas. At the time of writing this we are going through the COVID-19 pandemic. As such, we've been staying in our homes as best as we can. For me this means working and going to school from home. I'm still very busy, it being my last semester of school for the forseeable future. However when I do have free time I haven't been able to turn to the activities I normally do. Usually on the weekend I might visit friends or go the the gym, but seeing as I can't do either of those things I've taken on baking, as I know many people have.</p>
+        
+        <p><img class="img-responsive" src="assets/images/about_me_profile_picture.png" alt="profile picture" style="width:160px;height:120px;margin-right:15px; "></p>
+        <p style="font-size:1vw;">Welcome to my page! My name is Norma and I'm a soon to be graduate from the Univerity of St. Thomas. At the time of writing this we are going through the COVID-19 pandemic. As such, we've been staying in our homes as best as we can. For me this means working and going to school from home. I'm still very busy, it being my last semester of school for the forseeable future. However when I do have free time I haven't been able to turn to the activities I normally do. Usually on the weekend I might visit friends or go the the gym, but seeing as I can't do either of those things I've taken on baking, as I know many people have.</p>
         <p style="font-size:1vw;"> I've personally always enjoyed cooking and baking, but baking in particular has usually been something saved for the holiday season or birthdays. It's partly due to the time it takes and partly because if I bake something I'll have to eat it. But because my family and I have been staying inside, we aren't going out to restaurants right now, so baking has become a normal part of our routine cooking. My family is Lebanese so while we make bread in a loaf pan we've also been making pocket bread, something I never would have known how to make before these past few months. My younger sister has been taking time once a week to video chat her friends and they bake something sweet all together, usually it's cookies or bars but this week she tried making a loaf cake. While baking isn't a substitute for seeing my friends and coworkers, it's certainly been a helpful passtime until I can see them again. I hope it'll be soon that I can see them, but until then we'll just keep baking bread.</p>
          <p style="font-size:1vw;">  </p></div>
     </div>
